# TurtleIntelligenceBackend

./: .$Architecture.drawio.bkp  .gitignore  Architecture.drawio  CMakeLists.txt  Cargo.toml  README.md  envvars.txt  go.mod  go.sum  main.go  mainSim.go  pybind.go  test_file.cpp
agentTools/: agent_tools_api.go  agent_tools_ctrl.go  agent_tools_models.go  at_google.go  at_math.go  at_microsoft.go  at_vfs.go
api/: a.go  projects.go  scenes.go  tools.go  users.go
apiApp/: actors.go  containers.go  contents.go  models.go  world.go
arch/: .$arch.drawio.bkp  .$workspaces.drawio.bkp  Doc1.docx  Simulations architecture.docx  arch.drawio
auth/: a.go  authenticator.go  oauth2.go
blueprints/: blueprints_api.go  edges_ctrl.go  nodes.go  nodes_api.go  nodes_ctrl.go  nodes_init_library.go  nodes_preloaded.go
rust/: CMakeLists.txt
rust/src/: test.h
rust/src-actix/: Cargo.toml
rust/src-actix/src/: main.rs
rust/src-actix/src/api/: mod.rs
rust/src-app/: Cargo.toml
rust/src-app/src/: _std.rs  instances_guard.rs  inworld.rs  project.rs  station.rs  stepper.rs
rust/src-cmd/src/: main.rs
rust/src-math/src/: expr.rs  main.rs  time.rs
rust/src-test/: Cargo.toml
rust/src-test/src/: lib.rs  tests_time.rs
rust/src/app/: app.cpp
rust/src/prelude/: prelude.h
rust/src/sim/: stepper.cpp  stepper.h
rust/src/time/: time.cpp  time.h
rust/static/: index.html
src-app/: Cargo.toml
src-app/src/: entity.rs  entity_input.rs  entity_output.rs  inworld.rs  lib.rs  project.rs  station.rs  tool_context.rs
src-math/: Cargo.toml
src-math/src/: lib.rs  vec3.rs
(+566 files in other folders)
