[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = "../src-math" }
tokio = "1.35.1"
serde_json = "1.0"
serde = { version = "1", features = ["derive", "rc"] }

actix = "0.13.1"