[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive", "rc"] }
rand = "0.8.5"
lazy_static = "1.4.0"
regex = "1.10.4"
eval = "0.4.3"